Add notrace make target

--- a/uhc-initial-experiments/Makefile
+++ b/uhc-initial-experiments/Makefile
@@ -1,10 +1,8 @@
 default:
-	make js
+	uhc JScript.js -tjscript --gen-trace=1
 	
-js: JScript.mjs
-
-%.mjs : %.hs
-	uhc $< -tjscript --gen-trace=1
+notrace:
+	uhc JScript.js -tjscript
 
 clean:
 	find . -iname "*.hi" -o -iname "*.mjs" -o -iname "*.c" -o -iname "*.grin" -o -iname "*.core" | xargs rm
