Add main file as example 	jquery-1.4.3.js

--- a/uhc-initial-experiments/Makefile
+++ b/uhc-initial-experiments/Makefile
@@ -1,8 +1,8 @@
 default:
-	uhc JScript.js -tjscript --gen-trace=1
+	uhc Main.js -tjscript --gen-trace=1
 	
 notrace:
-	uhc JScript.js -tjscript
+	uhc Main.js -tjscript
 
 clean:
 	find . -iname "*.hi" -o -iname "*.mjs" -o -iname "*.c" -o -iname "*.grin" -o -iname "*.core" | xargs rm
